fixing minor bug on landing, updating visuals on project component, hide nav on mobile scroll

--- a/src/components/Project/Project.module.css
+++ b/src/components/Project/Project.module.css
@@ -5,7 +5,7 @@
   width: 100%;
   margin: 0 auto;
   background: dark-green;
-  border-radius: 0.375rem;
+  border-radius: 1rem;
   padding: 1.5rem 0.25rem;
   box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1);
 }
@@ -18,17 +18,28 @@
 
 .project-link a {
   font-size: 1.5rem;
-  transition: all 150ms linear;
+  transition: all 300ms cubic-bezier(0.65, 0.09, 0.5, 0.97);
   text-decoration-line: underline;
   color: lime;
 }
 
-.project-image {
-  aspect-ratio: 16 / 9;
+.project-image-container {
+  position: relative;
+  overflow: hidden;
+  margin: 0.5rem;
   width: 100%;
-  border-radius: 0.6rem;
-  margin: 1rem 0;
-  transition: all 150ms linear;
+  height: 100%;
+  aspect-ratio: 16 / 9;
+  border-radius: 0.5rem;
+}
+
+.project-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: all 300ms cubic-bezier(0.65, 0.09, 0.5, 0.97);
 }
 
 .text-block {
@@ -54,9 +65,24 @@
   font-weight: 400;
 }
 
+.swap-text {
+  position: relative;
+}
+
 .visit-link {
+  position: relative;
+  display: inline-block;
   padding: 0.5rem;
   margin-top: 1rem;
+}
+
+.see-details-text {
+  text-decoration: underline;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  text-align: center;
+  white-space: nowrap;
 }
 
 @media (min-width: 768px) {
@@ -81,7 +107,7 @@
   }
   .project-link:hover .project-image {
     filter: grayscale(0);
-    transform: scale(1.02);
+    transform: scale(1.05);
   }
   .skills-list {
     justify-content: center;
@@ -91,7 +117,6 @@
     padding: 0.25rem 0.75rem;
     font-weight: 600;
   }
-
   .visit-link:hover {
     border-color: light-teal;
   }
