--- a/src/pageSections/LandingSection/LandingSection.module.css
+++ b/src/pageSections/LandingSection/LandingSection.module.css
@@ -8,6 +8,7 @@
   flex-direction: column;
   width: 100%;
   height: 100vh;
+  padding-top: 3rem;
   color: lime;
 }
 
@@ -18,6 +19,8 @@
 
 .background {
   position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   background-image: url("@/assets/background.jpg");
@@ -51,7 +54,10 @@
   color: light-teal;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 768px) and (min-height: 430px) {
+  .landing-banner {
+    padding-top: 5rem;
+  }
   .banner-text h1,
   .banner-text h2 {
     font-size: 4.5rem;
